updating theme color

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "COVID-19",
-  "theme_color": "#2196f3",
+  "theme_color": "#AC2C2D",
   "background_color": "#ffffff",
   "display": "standalone",
   "start_url": "/COVID-19/",
